--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.0
 Django==4.0.3
 django-filter==21.1
 djangorestframework==3.13.1
+drf-flex-fields==0.9.8
 psycopg2-binary==2.9.3
 pytz==2022.1
 sqlparse==0.4.2
