--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ celery==5.2.6
 cffi==1.15.0
 channels==3.0.4
 channels-redis==3.4.0
+cheroot==8.6.0
+CherryPy==18.6.1
 click==8.1.2
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -29,9 +31,16 @@ hiredis==2.0.0
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
+jaraco.classes==3.2.1
+jaraco.collections==3.5.1
+jaraco.context==4.1.1
+jaraco.functools==3.5.0
+jaraco.text==3.7.0
 kombu==5.2.4
+more-itertools==8.12.0
 msgpack==1.0.3
 packaging==21.3
+portend==3.1.0
 prompt-toolkit==3.0.29
 psycopg2-binary==2.9.3
 pyasn1==0.4.8
@@ -44,6 +53,7 @@ redis==4.2.2
 service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.2
+tempora==5.0.1
 Twisted==22.2.0
 txaio==22.2.1
 typing_extensions==4.1.1
@@ -51,5 +61,6 @@ tzdata==2022.1
 vine==5.0.0
 wcwidth==0.2.5
 wrapt==1.14.0
+zc.lockfile==2.0
 zope.event==4.5.0
 zope.interface==5.4.0
